move JS of upload_form to separate file
The code hardly changes so it should be cached by the browser. This
won't work if it's inlined.

Signed-off-by: Florian Pritz <bluewind@xinu.at>

--- a/data/.htaccess
+++ b/data/.htaccess
@@ -1,6 +1,7 @@
 <IfModule mod_expires.c>
 	ExpiresActive on
 	ExpiresByType text/css "access plus 1 year"
+	ExpiresByType application/javascript "access plus 1 year"
 </IfModule>
 
 Header append Cache-Control "public"
