check for apache modules in htaccess files
Signed-off-by: Florian Pritz <bluewind@xinu.at>

--- a/data/.htaccess
+++ b/data/.htaccess
@@ -4,6 +4,9 @@
 	ExpiresByType application/javascript "access plus 1 year"
 </IfModule>
 
-Header append Cache-Control "public"
+<IfModule mod_headers.c>
+	Header append Cache-Control "public"
+</IfModule>
+
 FileEtag none
 
